######################################################################
# @author      : Nikita Guzhva (nik_finger@mail.ru)
# @file        : CMakeLists
# @created     : Thursday Aug 26, 2021 23:44:34 MSK
######################################################################

cmake_minimum_required(VERSION 3.17)
project(pmr)

add_executable(pmr
    main.cpp
)

