######################################################################
# @author      : Nikita Guzhva (nik_finger@mail.ru)
# @file        : CMakeLists
# @created     : Monday Nov 01, 2021 15:10:23 MSK
######################################################################

cmake_minimum_required(VERSION 3.10)
project(thread_pool)

add_executable(thread_pool
  main.cpp
)

